/cp 2008-07-17  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/36855
	* semantics.c (trait_expr_value): Update __has_trivial_destructor
	semantics to the current WP (N2691).

/testsuite
2008-07-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/36855
	* g++.dg/ext/has_trivial_destructor.C: Rename to...
	* g++.dg/ext/has_trivial_destructor-1.C: ... this.
	* g++.dg/ext/has_trivial_destructor-2.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137914 138bc75d-0d04-0410-961f-82ee72b054a4